# rsjudge

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.adoc  README.zh-CN.adoc  buf.md  buf.work.yaml  buf.yaml  build.rs  deny.toml  dprint.json  licensesnip.config.jsonc  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  building.yml  codeql.yml  testing.yml  visualize.yml
config-demo/: executors.toml  seccomp.toml  services.toml
crates/rsjudge-amqp/: Cargo.toml
crates/rsjudge-amqp/src/: config.rs  lib.rs
crates/rsjudge-grpc/: Cargo.toml  build.rs
crates/rsjudge-grpc/proto/: buf.md  buf.yaml
crates/rsjudge-grpc/proto/cases/v1/: cases.proto
crates/rsjudge-grpc/proto/judge/v1/: judge.proto
crates/rsjudge-grpc/proto/register/v1/: register.proto
crates/rsjudge-grpc/proto/rsjudge/v1/: rsjudge.proto
crates/rsjudge-grpc/src/: config.rs  lib.rs  proto.rs  server.rs
crates/rsjudge-judger/: Cargo.toml
crates/rsjudge-judger/benches/: default_comparer.rs
crates/rsjudge-judger/benches/data/: 100k  100k.trim  10k  10k.trim  1M  1M.trim  1k  strip.sh
crates/rsjudge-judger/src/: default_comparer.rs  lib.rs
crates/rsjudge-judger/src/comparer/: compare.rs  default_comparer.rs  mod.rs
crates/rsjudge-judger/src/judger/: mod.rs
crates/rsjudge-judger/src/judger/request/: cases.rs  mod.rs  source.rs  test_cases.rs
crates/rsjudge-judger/src/utils/: mod.rs  trim.rs
crates/rsjudge-judger/src/utils/trim/: slice.rs
crates/rsjudge-rabbitmq/: Cargo.toml
crates/rsjudge-rabbitmq/src/: config.rs  error.rs  lib.rs
crates/rsjudge-rest/: Cargo.toml
crates/rsjudge-rest/src/: config.rs  lib.rs
crates/rsjudge-runner/: Cargo.toml  build.rs
crates/rsjudge-runner/examples/: cap_test.rs  demo.rs  exploit.rs  exploit_inner.rs  get_user_info.rs  large_alloc.rs  normal.rs  rusage_test.rs  sleep.rs  sleep_inner.rs  spin_lock.rs  spinning.rs
crates/rsjudge-runner/src/: cap_handle.rs  caps_check.rs  error.rs  lib.rs  macros.rs  resources.rs  run_as.rs  timing.rs  user.rs  user_macro.rs
crates/rsjudge-runner/src/utils/: cap_handle.rs  mod.rs
crates/rsjudge-runner/src/utils/resources/: mod.rs  rlimit.rs  rusage.rs
crates/rsjudge-traits/: Cargo.toml
crates/rsjudge-traits/src/: judger.rs  language_config.rs  lib.rs  resource.rs  service.rs
crates/rsjudge-traits/src/language/: config.rs  info.rs  mod.rs  option.rs
crates/rsjudge-utils/: Cargo.toml
crates/rsjudge-utils/src/: command.rs  error_macros.rs  lib.rs  trim.rs
crates/rsjudge-utils/tests/: logging_on_non_result.stderr  logging_on_non_result.test  macro_test.rs
crates/rsjudge-utils/tests/cases/: logging_on_non_result.rs  logging_on_non_result.stderr
debian/: changelog  postinst  postrm  service
docs/manpages/: rsjudge.adoc
packaging/deb/: postinst  postrm  service
packaging/shared/: sysuser  tmpfile
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  user.rs
templates/: executors.toml
xtask/: Cargo.toml
xtask/src/: main.rs
