[workspace]
members = ["crates/rsjudge-grpc", "crates/rsjudge-judger", "crates/rsjudge-rest", "crates/rsjudge-runner", "xtask"]

[workspace.package]
version = "0.1.0"
authors = ["NJUPT-SAST"]
license = "Apache-2.0"
edition = "2021"

# clap requires Rust 1.74+ to work
rust-version = "1.74"

[package]
name = "rsjudge"
version.workspace = true
authors.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true
description = "online judge sandbox server in Rust"

[package.metadata.deb]
assets = [
    [
        "target/release/rsjudge",
        "usr/bin/rsjudge",
        "755",
    ],
    [
        "templates/executors.toml",
        "etc/rsjudge/executors.toml",
        "644",
    ],
    [
        "templates/server.toml",
        "etc/rsjudge/server.toml",
        "644",
    ],
    [
        "target/release/out/rsjudge.1",
        "usr/share/man/man1/rsjudge.1",
        "644",
    ],
    [
        "README.adoc",
        "usr/share/doc/rsjudge/README",
        "644",
    ],
    [
        "target/release/out/rsjudge.bash",
        "usr/share/bash-completion/completions/rsjudge",
        "644",
    ],
    [
        "target/release/out/rsjudge.fish",
        "usr/share/fish/vendor_completions.d/rsjudge.fish",
        "644",
    ],
    [
        "target/release/out/_rsjudge",
        "usr/share/zsh/vendor-completions/_rsjudge",
        "644",
    ],
]
copyright = "2023-2024 NJUPT-SAST"
changelog = "debian/changelog"
features = ["default"]
conf-files = ["/etc/rsjudge/server.toml", "/etc/rsjudge/executors.toml"]
extended-description = "An online judge sandbox server in Rust, inspired by go-judge, for SAST OJ."
maintainer = "Xiaoqing Xuan <jswn@jswn9945.xyz>"
maintainer-scripts = "debian/"
depends = "$auto, adduser, libc6, libgcc-s1, libstdc++6, libssl1.1, libzstd1, libzstd-dev"
recommends = "gcc, g++, python3"
suggests = "pypy3"
section = "net"
systemd-units = { enable = false }

[dependencies]
# Workspace dependencies
rsjudge-judger = { version = "0.1.0", path = "crates/rsjudge-judger" }
rsjudge-runner = { version = "0.1.0", path = "crates/rsjudge-runner" }

# Optional dependencies
rsjudge-grpc = { version = "0.1.0", path = "crates/rsjudge-grpc", optional = true }
rsjudge-rest = { version = "0.1.0", path = "crates/rsjudge-rest", optional = true }

anyhow = "1.0.80"
caps = "0.5.5"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "macros"] }
toml = "0.8.12"

# Unused for now:
# cgroups = "0.1.0"
# nix = { version = "0.27.1", features = ["fs"] }
# serde = { version = "1.0.197", features = ["derive"] }
# strfmt = "0.2.4"
# uzers = "0.11.3"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[features]
grpc = ["dep:rsjudge-grpc"]
rest = ["dep:rsjudge-rest"]
default = ["grpc"]

[build-dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
