# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "crates/rsjudge-grpc",
    "crates/rsjudge-judger",
    "crates/rsjudge-rest",
    "crates/rsjudge-runner",
    "crates/rsjudge-utils",
    "xtask",
]

[workspace.package]
version = "0.1.0"
authors = ["NJUPT-SAST"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NJUPT-SAST/rsjudge"

# clap requires Rust 1.74+ to work
rust-version = "1.74"

[workspace.dependencies]
log = "0.4.21"
rsjudge-utils = { version = "0.1.0", path = "crates/rsjudge-utils" }

[package]
name = "rsjudge"
version.workspace = true
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "online judge sandbox server in Rust"

[package.metadata.deb]
assets = [
    [
        "target/release/rsjudge",
        "usr/bin/rsjudge",
        "755",
    ],
    [
        "templates/executors.toml",
        "etc/rsjudge/executors.toml",
        "644",
    ],
    [
        "templates/server.toml",
        "etc/rsjudge/server.toml",
        "644",
    ],
    [
        "target/assets/rsjudge.1",
        "usr/share/man/man1/rsjudge.1",
        "644",
    ],
    [
        "README.adoc",
        "usr/share/doc/rsjudge/README",
        "644",
    ],
    [
        "target/assets/rsjudge.bash",
        "usr/share/bash-completion/completions/rsjudge",
        "644",
    ],
    [
        "target/assets/_rsjudge",
        "usr/share/zsh/vendor-completions/_rsjudge",
        "644",
    ],
    [
        "target/assets/rsjudge.fish",
        "usr/share/fish/vendor_completions.d/rsjudge.fish",
        "644",
    ],
]
copyright = "2023-2024 NJUPT-SAST"
changelog = "packaging/deb/changelog"
features = ["default"]
conf-files = ["/etc/rsjudge/server.toml", "/etc/rsjudge/executors.toml"]
extended-description = "An online judge sandbox server in Rust, inspired by go-judge, for SAST OJ."
maintainer = "Xiaoqing Xuan <jswn@jswn9945.xyz>"
maintainer-scripts = "packaging/deb/"
depends = "$auto, adduser, libc6, libgcc-s1, libstdc++6, libssl1.1, libzstd1, libzstd-dev"
recommends = "gcc, g++, python3"
suggests = "pypy3"
section = "net"
systemd-units = { unit-scripts = "packaging/shared", enable = false }

[package.metadata.generate-rpm]

[[package.metadata.generate-rpm.assets]]
source = "target/release/rsjudge"
dest = "/usr/bin/rsjudge"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "templates/*"
dest = "/etc/rsjudge/"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/rsjudge.1"
dest = "/usr/share/man/man1/rsjudge.1"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "README.adoc"
dest = "/usr/share/doc/rsjudge/README.adoc"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/rsjudge.bash"
dest = "/usr/share/bash-completion/completions/rsjudge"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/_rsjudge"
dest = "/usr/share/zsh/site-functions/_rsjudge"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/rsjudge.fish"
dest = "/usr/share/fish/vendor_completions.d/rsjudge.fish"

[[package.metadata.generate-rpm.assets]]
source = "packaging/shared/service"
dest = "/usr/lib/systemd/system/rsjudge.service"

[[package.metadata.generate-rpm.assets]]
source = "packaging/shared/tmpfile"
dest = "/usr/lib/tmpfiles.d/rsjudge.conf"

[[package.metadata.generate-rpm.assets]]
source = "packaging/shared/sysuser"
dest = "/usr/lib/sysusers.d/rsjudge.conf"

[dependencies]
# Workspace dependencies
rsjudge-judger = { version = "0.1.0", path = "crates/rsjudge-judger" }
rsjudge-runner = { version = "0.1.0", path = "crates/rsjudge-runner" }
rsjudge-utils.workspace = true

# Optional dependencies
rsjudge-grpc = { version = "0.1.0", path = "crates/rsjudge-grpc", optional = true }
rsjudge-rest = { version = "0.1.0", path = "crates/rsjudge-rest", optional = true }

anyhow = "1.0.82"
caps = "0.5.5"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log.workspace = true
mimalloc = "0.1.39"
tokio = { version = "1.37.0", features = ["fs", "rt-multi-thread", "macros", "process"] }
toml = "0.8.12"

# Unused for now:
# cgroups = "0.1.0"
# nix = { version = "0.27.1", features = ["fs"] }
# serde = { version = "1.0.197", features = ["derive"] }
# strfmt = "0.2.4"
# uzers = "0.11.3"

# [dev-dependencies]
# tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

[features]
grpc = ["dep:rsjudge-grpc"]
rest = ["dep:rsjudge-rest"]
default = ["grpc"]

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
