# SPDX-License-Identifier: Apache-2.0
[package]
name = "rsjudge"
version.workspace = true
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "online judge sandbox server in Rust"

[workspace]
members = [
    "crates/rsjudge-amqp",
    "crates/rsjudge-grpc",
    "crates/rsjudge-judger",
    "crates/rsjudge-rest",
    "crates/rsjudge-runner",
    "crates/rsjudge-traits",
    "crates/rsjudge-utils",
    "xtask",
]

[workspace.package]
version = "0.1.0"
authors = ["NJUPT-SAST"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NJUPT-SAST/rsjudge"
# MSRV is set to N - 2, where N is the current stable version.
rust-version = "1.84"

[workspace.dependencies]
log = "0.4.27"
rsjudge-traits = { version = "0.1.0", path = "crates/rsjudge-traits" }
rsjudge-utils = { version = "0.1.0", path = "crates/rsjudge-utils" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.44.2"

[workspace.lints.rust]
rust-2024-compatibility = "warn"

[dependencies]
# Workspace dependencies
rsjudge-judger = { version = "0.1.0", path = "crates/rsjudge-judger" }
rsjudge-runner = { version = "0.1.0", path = "crates/rsjudge-runner" }
rsjudge-traits.workspace = true
rsjudge-utils.workspace = true

# Optional dependencies
rsjudge-amqp = { version = "0.1.0", path = "crates/rsjudge-amqp", optional = true }
rsjudge-grpc = { version = "0.1.0", path = "crates/rsjudge-grpc", optional = true }
rsjudge-rest = { version = "0.1.0", path = "crates/rsjudge-rest", optional = true }

anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
log.workspace = true
mimalloc = { version = "0.1.46", optional = true }
serde.workspace = true
sysinfo = { version = "0.35.0", features = ["serde"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros", "process"] }
toml = "0.8.22"

# Unused for now:
# nix = { version = "0.29.0", features = ["fs"] }
# strfmt = "0.2.4"

[features]
default = ["grpc", "rest", "mimalloc"]
amqp = ["dep:rsjudge-amqp", "rsjudge-amqp/serde"]
grpc = ["dep:rsjudge-grpc", "rsjudge-grpc/serde"]
mimalloc = ["dep:mimalloc"]
rest = ["dep:rsjudge-rest"]

[build-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.49"
clap_mangen = "0.2.26"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[package.metadata.deb]
assets = [
    [
        "target/release/rsjudge",
        "usr/bin/rsjudge",
        "755",
    ],
    [
        "config-demo/executors.toml",
        "etc/rsjudge/executors.toml",
        "644",
    ],
    [
        "config-demo/services.toml",
        "etc/rsjudge/services.toml",
        "644",
    ],
    [
        "target/assets/rsjudge.1",
        "usr/share/man/man1/rsjudge.1",
        "644",
    ],
    [
        "README.adoc",
        "usr/share/doc/rsjudge/README",
        "644",
    ],
    [
        "target/assets/rsjudge.bash",
        "usr/share/bash-completion/completions/rsjudge",
        "644",
    ],
    [
        "target/assets/_rsjudge",
        "usr/share/zsh/vendor-completions/_rsjudge",
        "644",
    ],
    [
        "target/assets/rsjudge.fish",
        "usr/share/fish/vendor_completions.d/rsjudge.fish",
        "644",
    ],
]
changelog = "packaging/deb/changelog"
copyright = "2023-2025 NJUPT-SAST"
features = ["default"]
conf-files = ["/etc/rsjudge/services.toml", "/etc/rsjudge/executors.toml"]
extended-description = "An online judge sandbox server in Rust, inspired by go-judge, for SASTOJ."
maintainer = "JisuWoniu <jswn@jswn9945.xyz>"
maintainer-scripts = "packaging/deb/"
depends = "$auto, adduser, libc6, libgcc-s1, libstdc++6, libssl1.1, libzstd1, libzstd-dev"
recommends = "gcc, g++, python3"
suggests = "pypy3"
section = "net"
systemd-units = { unit-scripts = "packaging/shared", enable = false }

[package.metadata.generate-rpm]

[[package.metadata.generate-rpm.assets]]
source = "target/release/rsjudge"
dest = "/usr/bin/rsjudge"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "config-demo/*"
dest = "/etc/rsjudge/"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/rsjudge.1"
dest = "/usr/share/man/man1/rsjudge.1"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "README.adoc"
dest = "/usr/share/doc/rsjudge/README.adoc"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/rsjudge.bash"
dest = "/usr/share/bash-completion/completions/rsjudge"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/_rsjudge"
dest = "/usr/share/zsh/site-functions/_rsjudge"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "target/assets/rsjudge.fish"
dest = "/usr/share/fish/vendor_completions.d/rsjudge.fish"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "packaging/shared/service"
dest = "/usr/lib/systemd/system/rsjudge.service"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "packaging/shared/tmpfile"
dest = "/usr/lib/tmpfiles.d/rsjudge.conf"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "packaging/shared/sysuser"
dest = "/usr/lib/sysusers.d/rsjudge.conf"
mode = "644"
