# SPDX-License-Identifier: Apache-2.0

[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "A task runner for cargo workspaces"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }

[features]
dbg = []
