# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-amqp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
amqprs = { version = "2.1.0", features = ["urispec"] }
thiserror = "1.0.64"
tokio = "1.40.0"

rsjudge-traits.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
