# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-amqp"
version.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
amqprs = { version = "2.1.5", features = ["urispec"] }
thiserror = "2.0.18"
tokio.workspace = true

rsjudge-traits.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
