# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-grpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gRPC server for rsjudge"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
log.workspace = true
prost = "0.13.2"
prost-types = "0.13.2"
tokio = { workspace = true, features = ["net"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"

# Optional dependencies
axum = "0.7.5"
rsjudge-traits.workspace = true
serde = { workspace = true, optional = true }

[build-dependencies]
anyhow = "1.0.86"
rsjudge-utils.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tonic-build = "0.12.2"

[features]
serde = ["dep:serde"]
