# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-grpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gRPC server for rsjudge"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
log.workspace = true
prost = "0.14.0"
prost-types = "0.14.0"
tokio = { workspace = true, features = ["net"] }
tokio-stream = "0.1.17"
tonic = "0.13.1"

# Optional dependencies
rsjudge-traits.workspace = true
serde = { workspace = true, optional = true }

[build-dependencies]
anyhow = "1.0.98"
rsjudge-utils.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tonic-build = "0.13.1"

[features]
serde = ["dep:serde"]
