# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-judger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes = "1.9.0"
futures = "0.3.31"
rsjudge-traits.workspace = true
rsjudge-utils.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["io-util", "fs", "macros"] }

[dev-dependencies]
serde_json = "1.0.135"
tempfile = "3.15.0"
tokio = { workspace = true, features = ["rt-multi-thread", "full"] }
