# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-rabbitmq"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rabbitmq-stream-client = "0.4.2"
thiserror = "1.0.58"
tokio = "1.37.0"
