# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-rabbitmq"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.6.0", features = ["urispec"] }
thiserror = "1.0.59"
tokio = "1.37.0"

serde = { version = "1.0.198", features = ["derive"], optional = true }
rsjudge-traits = { version = "0.1.0", path = "../rsjudge-traits" }

[features]
serde = ["dep:serde"]
