# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-rest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7.9"
rsjudge-traits.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net"] }
