# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command runner for rsjudge"

[dependencies]
async-trait = "0.1.83"
capctl = "0.2.4"
libcgroups = "0.4.1"
libseccomp = { version = "0.3.0", features = ["const-syscall"] }
log.workspace = true
nix = { version = "0.29.0", features = ["user", "resource", "process"] }
rsjudge-traits.workspace = true
rsjudge-utils.workspace = true
thiserror = "2.0.4"
tokio = { workspace = true, features = ["process", "sync", "time", "signal"] }
tokio-util = "0.7.12"
uzers = "0.12.1"

[dev-dependencies]
anyhow = "1.0.93"

[build-dependencies]
rustversion = "1.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(setgroups)'] }
