# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command runner for rsjudge"

[dependencies]
capctl = "0.2.4"
libseccomp = { version = "0.4.0", features = ["const-syscall"] }
log.workspace = true
nix = { version = "0.31.1", features = ["user", "resource", "process"] }
oci-spec = "0.9.0"
rsjudge-traits.workspace = true
rsjudge-utils.workspace = true
thiserror = "2.0.18"
tokio = { workspace = true, features = ["process", "sync", "time", "signal"] }
tokio-util = "0.7.18"
uzers = "0.12.2"

# Unused dependencies
# libcgroups = "0.4.1"

[dev-dependencies]
anyhow = "1.0.101"

[build-dependencies]
rustversion = "1.0.22"
