# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-traits"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { version = "2.11.4", features = ["serde"] }
serde.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
serde_json = "1.0.145"
toml = { version = "0.9.6", features = ["preserve_order"] }
