# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
shell-words = "1.1.0"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["process", "macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.83"
trybuild = "1.0.96"
