# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
shell-words = "1.1.0"
thiserror = "1.0.65"
tokio = { workspace = true, features = ["process", "macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.91"
