# SPDX-License-Identifier: Apache-2.0

[package]
name = "rsjudge-utils"
version.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { workspace = true, features = ["process", "macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.102"
